Fix always visible scroll on highlighted SQL nodes in Flow view

--- a/src/scss/components/_flowView.scss
+++ b/src/scss/components/_flowView.scss
@@ -93,7 +93,7 @@
   }
 
   .highlight .sql {
-    overflow: scroll;
+    overflow: auto;
   }
 
   .modal-content {
